# bumo

./: .gitignore  CMakeLists.txt  README.md
src/: Shell.cpp  Shell.h  definitions.h  geomtools.cpp  geomtools.h  main.cpp
